[package]
name = "pomo-rs"
version = "0.1.0"
authors = ["Mani Sundararajan <mani@hey.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15"
indicatif = "0.17"
color-eyre = { version = "0.6", default-features = false }
bpaf = { version = "0.9.5", features = ["derive"] }
tokio = { version = "1.33.0", features = ["time", "macros", "rt", "rt-multi-thread"] }
